php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47856 stristr() converts needle to lower-case
Submitted: 2009-04-01 03:38 UTC Modified: 2009-04-01 14:01 UTC
From: hk at truebridge dot com Assigned:
Status: Closed Package: Strings related
PHP Version: 5.3CVS-2009-04-01 OS: *
Private report: No CVE-ID: None
 [2009-04-01 03:38 UTC] hk at truebridge dot com
Description:
------------
stristr converts needle to lower-case

Problem occurs on XP SP3

This does not happen on PHP 5.2.8 on FreeBSD 7.1





Reproduce code:
---------------
$haystack = "HAYSTACK";
$needle = "NEEDLE";
stristr( $haystack,$needle);
echo $haystack; // --> HAYSTACK
echo $needle;	// --> needle

Expected result:
----------------
HAYSTACK
NEEDLE

Actual result:
--------------
HAYSTACK
needle

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-04-01 10:50 UTC] jani@php.net
This only happens with PHP_5_3 branch. Both HEAD and PHP_5_2 are not 
affected.
 [2009-04-01 14:01 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 20:00:02 2026 UTC