Fixed bug #47856 (stristr() converts needle to lower-case).